# openclaude-gui

./: README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.qwen/: settings.json
frontend/: index.html
src/: App.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  main.rs
