[package]
name = "openclaude-gui"
version = "0.2.0"
description = "Desktop GUI for OpenClaude"
authors = ["OpenClaude Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
